tests/error-variable-cycle.test
description Test detection of cycle in variable definition.
arguments --create-library --target 6502 file.s
return 1
file file.s <inline>
cycle = cycle + 1
end-of-inline-data
# location should be file.s:1:8
stderr
file.s:1.8: error: circular definition of cycle
cycle = cycle + 1
        ^^^^^^^^^
end-of-inline-data
